tests/invalid/undefined.brandejs
;y should not be defined and should throw an error
x = y;